src/objects/APTS_Reports_Id__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Record Id of MSPAs with Agreement Line Items Report and Quotations with Proposal Line Items Repo.</description>
    <fields>
        <fullName>APTS_LP_MSPA_Information__c</fullName>
        <description>Record Id of &quot;APTS LP MSPA Information&quot; email template.</description>
        <label>APTS LP MSPA Information</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MSPAs_with_Agreement_Line_Items__c</fullName>
        <description>Record Id of MSPAs with Agreement Line Items Report.</description>
        <label>MSPAs with Agreement Line Items Report</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotations_with_Proposal_Line_Items__c</fullName>
        <description>Record Id of Quotations with Proposal Line Items Repo.</description>
        <label>Quotations with Proposal Line Items Repo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Apttus Reports Id</label>
</CustomObject>